data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4132.wast
;; 1. **Test 1**:     - Verify that a `call_indirect` instruction calls a looping function indirectly through a valid `funcref` table index, with the function type conforming exactly to the expected type. The loop should have an incorrect `br_if` condition leading to potential infinite execution.    - **Constraint Checked**: Ensures proper dynamic type checking and handling of loop control flow within called functions.

(assert_invalid
  (module
    (type $loop_type (func (param i32) (result i32)))
    (table funcref (elem $loop_func))
    (func $loop_func (export "loop_func") (param i32) (result i32)
      local.get 0
      br_if 0
      local.get 0
      call_indirect (type $loop_type) (i32.const 0)
    )
    (func (param i32) (result i32)
      i32.const 1
      call_indirect (type $loop_type) (i32.const 0)
    )
  )
  "type mismatch"
)